# visionBox

./: .gitignore  CMakeLists.txt  boite_traitement.cpp  boite_traitement.h  clickablelabel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  panneau_flux_traitements.cpp  panneau_flux_traitements.h  resources.qrc  traitement_flou.cpp  traitement_flou.h  traitement_image.h  webcamdialog.cpp  webcamdialog.h
VisionBox_TemplateTraitements/: README.md  adaptateur_monexempledetraitement.cpp  adaptateur_monexempledetraitement.h  monexempledetraitement.cpp  monexempledetraitement.h
traitements/: traitement_factory.h
traitements/adaptateurs_qt/: adaptateur_contours.h  adaptateur_flou.cpp  adaptateur_flou.h  adaptateur_mosaique.h  traitement_image.h
traitements/core/: flou.cpp  flou.h  mosaique.h
